--- a/package.json
+++ b/package.json
@@ -10,10 +10,32 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
+    "@date-io/date-fns": "^3.0.0",
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/lab": "^5.0.0-alpha.173",
+    "@mui/material": "^5.16.6",
+    "@mui/material-nextjs": "^5.16.6",
+    "@mui/x-date-pickers": "^7.11.1",
     "aws-amplify": "^6.4.0",
+    "browser-image-compression": "^2.0.2",
+    "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "next": "14.1.1",
+    "next-intl": "^3.17.2",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-signature-canvas": "^1.0.6",
+    "react-toastify": "^10.0.5",
+    "uuidv4": "^6.2.13",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
