--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/x-date-pickers": "^7.11.1",
     "@tanstack/react-query": "^5.51.21",
     "aws-amplify": "^6.4.0",
+    "aws-cdk-lib": "^2.151.0",
     "axios": "^1.7.3",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^3.6.0",
