--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ RESEND_API_KEY=re_6PPKVJCk_9Ur95wjGEjjUMNtUUaygfusn
 
 NEXT_PUBLIC_USER_POOL_ID=ap-south-1_T2HdKpolG
 NEXT_PUBLIC_USER_POOL_CLIENT_ID=t5e5h9nlj9tpieor3javgbur2
+NEXT_PUBLIC_IDENTITY_POOL_ID=ap-south-1:b5e43a38-9e17-4644-9787-e678f15da7f7
