--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browser-image-compression": "^2.0.2",
     "constructs": "^10.3.0",
     "date-fns": "^3.6.0",
+    "esbuild": "latest",
     "lodash": "^4.17.21",
     "next": "14.1.1",
     "next-intl": "^3.17.2",
