--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "date-fns": "^3.6.0",
     "esbuild": "latest",
     "lodash": "^4.17.21",
+    "mime": "^4.0.4",
     "next": "14.1.1",
     "next-intl": "^3.17.2",
+    "nodemailer": "^6.9.15",
     "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
