--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material-nextjs": "^5.16.6",
     "@mui/x-date-pickers": "^7.11.1",
     "aws-amplify": "^6.6.0",
+    "aws-cdk": "^2.159.1",
     "aws-cdk-lib": "^2.158.0",
     "axios": "^1.7.3",
     "browser-image-compression": "^2.0.2",
